--- a/packages/easy-email-editor/package.json
+++ b/packages/easy-email-editor/package.json
@@ -58,6 +58,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "mjml-browser": "^4.10.4",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
