--- a/packages/easy-email-extensions/package.json
+++ b/packages/easy-email-extensions/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "lerna": "^4.0.0",
     "less": "^4.1.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
