--- a/packages/easy-email-core/package.json
+++ b/packages/easy-email-core/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^26.0.24",
+    "@types/js-beautify": "^1.13.3",
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.7",
@@ -69,6 +70,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "js-beautify": "^1.14.3",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.1",
     "typescript": "^4.4.4",
