--- a/packages/easy-email-core/package.json
+++ b/packages/easy-email-core/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/final-form-set-field-touched": "^1.0.0",
     "@types/jest": "^26.0.24",
     "@types/js-beautify": "^1.13.3",
     "@types/jsdom": "^16.2.13",
